pkg/lang/syntax/testdata/ub/lower/invalid/preclassified-exported-type.ub
inputs: {
  message: { type: string }
}

outputs: {
  message: { value: var.message }
}
